--- a/TESTS/css/style.css
+++ b/TESTS/css/style.css
@@ -1,6 +1,6 @@
 
 body {
-	font-family: Arial, Helvetica, sans-serif;
+	font-family: 'Open Sans';
 	font-size: 15px
 }
 
@@ -11,10 +11,44 @@ h3 {font-size: 16px;}
 .bold-text {font-weight: bold; }
 .red-text {color: red;}
 .purple-text {color: purple;}
+.shadow {
+	background-color: yellow;
+	color: red;
+	font-size: 2.5em;
+	font-weight: bold;
+	text-shadow: 2px 2px 1px #C0C0C0;
+}
+.shadow1 {
+	background-color: yellow;
+	color: red;
+	font-size: 2.5em;
+	font-weight: bold;
+	text-shadow: 2px 2px  #C0C0C0;
+}
 
+	
 #top-ad {
 	background-color: yellow;
 	color: red;
+	font-size: 2em;
+}
+.royal_blue {color: rgb(65,205,225);
+	letter-spacing: 1px;
+	font-size: 3em;
+	font-style: italic;
+	background-color: black;
+}
+.greystar {
+	color: rgb(255,0, 255);
+	letter-spacing: 2px;
+	font-size:1.2em;
+	font-style: roman;
+}
+.larger-spacing {letter-spacing: 2px;}
+#inner-header {
+	background-color: black;
+	color: yellow;
+	font-size: 18px;
 }
 a:link {color:red; }
 a:visited {color:purple;}
