--- a/TESTS/css/style.css
+++ b/TESTS/css/style.css
@@ -63,7 +63,11 @@ article p:nth-child(3) {color: grey}
 article p:last-child {color: cyan; font-size: 30px;}
 article::first-line {font-style:italic;}
 h3::first-letter {font-size: 45px; font-style: roman}
-h2::selection {color: red; font-size: 50px;}
+h2::selection {
+	background-color: black;
+        color: red;
+	font-size: 50px;
+}
 p::before {
 	content: "NOTE: ";
 	font-weight: bold;
@@ -75,3 +79,54 @@ p::after {
 	background-color: black;
 	color: yellow;
 	}
+.relative-position {
+	position: relative;
+	left: 20px;
+}
+
+.fixed {
+	position: fixed;
+	top:0;
+	right: 0;
+	width: 640px;
+	content: "Fixed PIZDOTA";
+	font-style: italic;
+	font-size: 2em;
+	background-color: rgb(200, 200, 200);
+	color: orange;
+}
+	
+div.the-parent 
+{
+	position: relative;
+	background-color: #CCCCCC;
+	width: 400px;
+	height: 200px;
+	border: 1px solid black;
+}
+div.the-child {
+	position: absolute;
+	background-color: #FFF;
+	top: 80px;
+	right: 0;
+	width: 200px;
+	height: 100px;
+	border: 1px solid black;
+}
+
+.sidebar {
+	float: right;
+	height: 100px;
+	width: 200px;
+	padding: 5px;
+	border: 2px solid black;
+}
+.main-text {border: 1px solid #333333;
+	clear: right;
+}
+
+.carter {
+	border: 1px solid #000;
+	padding: 5px;
+}
+#carter-pic {float: right;}
