--- a/TESTS/css/style.css
+++ b/TESTS/css/style.css
@@ -128,5 +128,23 @@ div.the-child {
 .carter {
 	border: 1px solid #000;
 	padding: 5px;
+	overflow: auto;
+}
+.carter::after {
+	content: "";
+	clear: both;
+	display: table;
 }
 #carter-pic {float: right;}
+.box {
+	float: left;
+	width: 33.33%;
+	padding: 50px;
+	border: 1px solid #000000;
+}
+.grid::after {
+	content:"";
+	clear: both;
+	display: table;
+}
+/*.box, .grid, .grid::after {box-sizing: border-box;}*/
