--- a/css/style.css
+++ b/css/style.css
@@ -127,5 +127,18 @@ footer a { color: cornsilk; }
     margin-bottom: 25px;
     border: 1px solid #000
 }
+.promotion {
+	position: relative;
+	top: 0;
+	left: 0;
+	right: 0;
+	background-color: yellow;
+	color: black;
+	font-weight: bold;
+	font-style: italic;
+	font-family: 'Open Sans';
+	font-size: 1.5em;
+	vertical-align: middle;
 
+}
 /* End Page Content */
