--- a/TESTS/css/style.css
+++ b/TESTS/css/style.css
@@ -155,7 +155,7 @@ div.the-child {
 .inline-text {display: inline-block;}
 .main-nav {
 	font-family: 'Open Sans',verdana, sans-serif;
-	font-size: .8rem;
+	font-size: 2rem;
 	list-style-type: none;
 	margin: 0;
 	padding: 0;
@@ -189,4 +189,13 @@ cite {
 	font-size: 80%;
 	color:gray;
 }				
-
+table {border: 1px solid blue;}
+th {
+	background-color: darkblue;
+	color: white;
+	font-weight: bold;
+}
+td {padding: 5px;}
+tr:nth-child(even) {background-color:lightgray;}
+.center-cell {text-align: center;}
+.subject {font-size:3em;}
